--- a/SimpleStaticWebsite/index.html
+++ b/SimpleStaticWebsite/index.html
@@ -25,10 +25,10 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
-        <div class="button">
+        <!-- <div class="button">
             <a href="#" class="buttonChild">LinkedIn</a>
             <a href="https://github.com/luongtrantronghuy/SADC/tree/main/SimpleStaticWebsite" class="buttonChild">Source Code</a>
-        </div>
+        </div> -->
     </header>
 </body>
 
